--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hust-graduation-thesis-pandoc",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A tool for rendering HUST graduation thesis(including master and bachelor) using pandoc and latex.",
   "author": "Ray Taylor Lin",
   "license": "MIT",
@@ -8,6 +8,7 @@
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-pandoc": "^0.2.1",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "yargs": "^3.31.0"
   }
 }
