--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "hust-graduation-thesis-pandoc",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A tool for rendering HUST graduation thesis(including master and bachelor) using pandoc and latex.",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/raytaylorlin/hust-graduation-thesis-pandoc.git"
+  },
   "author": "Ray Taylor Lin",
   "license": "MIT",
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-pandoc": "^0.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "run-sequence": "^1.1.5",
     "yargs": "^3.31.0"
+  },
+  "bugs": {
+    "url": "https://github.com/raytaylorlin/hust-graduation-thesis-pandoc/issues"
+  },
+  "engines": {
+    "node": ">=0.12"
   }
 }
